--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "formik": "^2.2.9",
     "modern-normalize": "^1.1.0",
     "nanoid": "^4.0.1",
     "prop-types": "^15.8.1",
@@ -15,8 +14,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
-    "web-vitals": "^2.1.3",
-    "yup": "^1.0.0"
+    "web-vitals": "^2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
